Fix: Background and foreground colors do not have a sufficient contrast ratio.

--- a/src/global.css
+++ b/src/global.css
@@ -472,7 +472,7 @@
   --tw-backdrop-opacity: ;
   --tw-backdrop-saturate: ;
   --tw-backdrop-sepia: ;
-  --tw-prose-links: var(--ds-blue-700);
+  --tw-prose-links: var(--ds-blue-900);
   box-sizing: border-box;
   border-width: 0;
   border-style: solid;
